# obs-uv-mapper

./: Cargo.toml  README.md  build.rs
bindings/src/: bindings.rs  lib.rs
src/: lib.rs  uv_mapping.effect
uv_map/: Cargo.toml
uv_map/src/: lib.rs
webgl/: LICENSE  gl-mesh.js  gl.js
