[package]
name = "obs-uv-mapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
uv_map = { path = "./uv_map" }
bindings = { path = "./bindings" }

[build-dependencies]
cc = { version = "1.0" }
